// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalArea component PersonalArea empty snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="title"
        >
          Личный кабинет
        </div>
        <table
          class="table"
        >
          <thead
            class="thead"
          >
            <tr>
              <th
                class="th"
              >
                Номер заказа
              </th>
              <th
                class="th"
              >
                Название
              </th>
              <th
                class="th"
              >
                Дата доставки
              </th>
              <th
                class="th"
              >
                Получатель
              </th>
              <th
                class="th"
              >
                Статус
              </th>
              <th
                class="th"
              >
                Сумма
              </th>
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="title"
      >
        Личный кабинет
      </div>
      <table
        class="table"
      >
        <thead
          class="thead"
        >
          <tr>
            <th
              class="th"
            >
              Номер заказа
            </th>
            <th
              class="th"
            >
              Название
            </th>
            <th
              class="th"
            >
              Дата доставки
            </th>
            <th
              class="th"
            >
              Получатель
            </th>
            <th
              class="th"
            >
              Статус
            </th>
            <th
              class="th"
            >
              Сумма
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PersonalArea component PersonalArea snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="title"
        >
          Личный кабинет
        </div>
        <table
          class="table"
        >
          <thead
            class="thead"
          >
            <tr>
              <th
                class="th"
              >
                Номер заказа
              </th>
              <th
                class="th"
              >
                Название
              </th>
              <th
                class="th"
              >
                Дата доставки
              </th>
              <th
                class="th"
              >
                Получатель
              </th>
              <th
                class="th"
              >
                Статус
              </th>
              <th
                class="th"
              >
                Сумма
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="tr"
            >
              <td
                class="td"
              >
                5
              </td>
              <td
                class="td"
              >
                Букет цветов
              </td>
              <td
                class="td"
              />
              <td
                class="td"
              >
                myName
              </td>
              <td
                class="td awaitingpayment"
              >
                Оплачено
              </td>
              <td
                class="td"
              >
                15000
                 ₽
              </td>
            </tr>
            <tr
              class="tr"
            >
              <td
                class="td"
              >
                3
              </td>
              <td
                class="td"
              >
                Букет тюльпанов
              </td>
              <td
                class="td"
              />
              <td
                class="td"
              >
                myName
              </td>
              <td
                class="td awaitingpayment"
              >
                Ожидает оплаты
              </td>
              <td
                class="td"
              >
                10500
                 ₽
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="title"
      >
        Личный кабинет
      </div>
      <table
        class="table"
      >
        <thead
          class="thead"
        >
          <tr>
            <th
              class="th"
            >
              Номер заказа
            </th>
            <th
              class="th"
            >
              Название
            </th>
            <th
              class="th"
            >
              Дата доставки
            </th>
            <th
              class="th"
            >
              Получатель
            </th>
            <th
              class="th"
            >
              Статус
            </th>
            <th
              class="th"
            >
              Сумма
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="tr"
          >
            <td
              class="td"
            >
              5
            </td>
            <td
              class="td"
            >
              Букет цветов
            </td>
            <td
              class="td"
            />
            <td
              class="td"
            >
              myName
            </td>
            <td
              class="td awaitingpayment"
            >
              Оплачено
            </td>
            <td
              class="td"
            >
              15000
               ₽
            </td>
          </tr>
          <tr
            class="tr"
          >
            <td
              class="td"
            >
              3
            </td>
            <td
              class="td"
            >
              Букет тюльпанов
            </td>
            <td
              class="td"
            />
            <td
              class="td"
            >
              myName
            </td>
            <td
              class="td awaitingpayment"
            >
              Ожидает оплаты
            </td>
            <td
              class="td"
            >
              10500
               ₽
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PersonalArea component render FormHead 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="title"
        >
          Личный кабинет
        </div>
        <table
          class="table"
        >
          <thead
            class="thead"
          >
            <tr>
              <th
                class="th"
              >
                Номер заказа
              </th>
              <th
                class="th"
              >
                Название
              </th>
              <th
                class="th"
              >
                Дата доставки
              </th>
              <th
                class="th"
              >
                Получатель
              </th>
              <th
                class="th"
              >
                Статус
              </th>
              <th
                class="th"
              >
                Сумма
              </th>
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="title"
      >
        Личный кабинет
      </div>
      <table
        class="table"
      >
        <thead
          class="thead"
        >
          <tr>
            <th
              class="th"
            >
              Номер заказа
            </th>
            <th
              class="th"
            >
              Название
            </th>
            <th
              class="th"
            >
              Дата доставки
            </th>
            <th
              class="th"
            >
              Получатель
            </th>
            <th
              class="th"
            >
              Статус
            </th>
            <th
              class="th"
            >
              Сумма
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PersonalArea render FormHead 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="title"
        >
          Личный кабинет
        </div>
        <table
          class="table"
        >
          <thead
            class="thead"
          >
            <tr>
              <th
                class="th"
              >
                Номер заказа
              </th>
              <th
                class="th"
              >
                Название
              </th>
              <th
                class="th"
              >
                Дата доставки
              </th>
              <th
                class="th"
              >
                Получатель
              </th>
              <th
                class="th"
              >
                Статус
              </th>
              <th
                class="th"
              >
                Сумма
              </th>
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="title"
      >
        Личный кабинет
      </div>
      <table
        class="table"
      >
        <thead
          class="thead"
        >
          <tr>
            <th
              class="th"
            >
              Номер заказа
            </th>
            <th
              class="th"
            >
              Название
            </th>
            <th
              class="th"
            >
              Дата доставки
            </th>
            <th
              class="th"
            >
              Получатель
            </th>
            <th
              class="th"
            >
              Статус
            </th>
            <th
              class="th"
            >
              Сумма
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PersonalArea render orders 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="title"
        >
          Личный кабинет
        </div>
        <table
          class="table"
        >
          <thead
            class="thead"
          >
            <tr>
              <th
                class="th"
              >
                Номер заказа
              </th>
              <th
                class="th"
              >
                Название
              </th>
              <th
                class="th"
              >
                Дата доставки
              </th>
              <th
                class="th"
              >
                Получатель
              </th>
              <th
                class="th"
              >
                Статус
              </th>
              <th
                class="th"
              >
                Сумма
              </th>
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="title"
      >
        Личный кабинет
      </div>
      <table
        class="table"
      >
        <thead
          class="thead"
        >
          <tr>
            <th
              class="th"
            >
              Номер заказа
            </th>
            <th
              class="th"
            >
              Название
            </th>
            <th
              class="th"
            >
              Дата доставки
            </th>
            <th
              class="th"
            >
              Получатель
            </th>
            <th
              class="th"
            >
              Статус
            </th>
            <th
              class="th"
            >
              Сумма
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
